WebiParser.js
// Generated from Webi.g4 by ANTLR 4.7
// jshint ignore: start
var antlr4 = require('antlr4/index');
var WebiListener = require('./WebiListener').WebiListener;
var WebiVisitor = require('./WebiVisitor').WebiVisitor;

var grammarFileName = "Webi.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'.'", "'()'", "'initPlayground'", "'drawText'", 
                     "'clearPlayground()'", "'drawLine'", "'lineWidth('", 
                     "'strokeStyle('", "'fillStyle('", "'fillRect('", "'strokeRect('", 
                     "'createImage'", "'createButton'", "'println'", "'print'", 
                     "'input'", "'assert'", "'size'", "'def'", "'if'", "'else'", 
                     "'return'", "'for'", "'while'", "'to'", "'do'", "'end'", 
                     "'in'", "'null'", "'Number'", "'String'", "'List'", 
                     "'Boolean'", "'Image'", "'Object'", "'class'", "'new'", 
                     "'Playground'", "'Button'", "'push'", "'pop'", "'||'", 
                     "'&&'", "'=='", "'!='", "'>='", "'<='", "'^'", "'!'", 
                     "'>'", "'<'", "'+'", "'-'", "'*'", "'/'", "'%'", "'{'", 
                     "'}'", "'['", "']'", "'('", "')'", "';'", "'='", "','", 
                     "'?'", "':'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, "Println", "Print", 
                      "Input", "Assert", "Size", "Def", "If", "Else", "Return", 
                      "For", "While", "To", "Do", "End", "In", "Null", "Number", 
                      "String", "List", "Boolean", "Image", "Json", "Class", 
                      "New", "Playground", "Button", "Push", "Pop", "Or", 
                      "And", "Equals", "NEquals", "GTEquals", "LTEquals", 
                      "Pow", "Excl", "GT", "LT", "Add", "Subtract", "Multiply", 
                      "Divide", "Modulus", "OBrace", "CBrace", "OBracket", 
                      "CBracket", "OParen", "CParen", "SColon", "Assign", 
                      "Comma", "QMark", "Colon", "BoolVar", "NumberVar", 
                      "Identifier", "StringVar", "Comment", "Space" ];

var ruleNames =  [ "parse", "block", "statement", "assignment", "functionCall", 
                   "typeType", "ifStatement", "ifStat", "elseIfStat", "elseStat", 
                   "functionDecl", "classDecl", "forStatement", "whileStatement", 
                   "idList", "exprList", "expression", "list", "jsonInit", 
                   "imageInit", "buttonInit", "jsonCall", "objValues", "indexes" ];

function WebiParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

WebiParser.prototype = Object.create(antlr4.Parser.prototype);
WebiParser.prototype.constructor = WebiParser;

Object.defineProperty(WebiParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

WebiParser.EOF = antlr4.Token.EOF;
WebiParser.T__0 = 1;
WebiParser.T__1 = 2;
WebiParser.T__2 = 3;
WebiParser.T__3 = 4;
WebiParser.T__4 = 5;
WebiParser.T__5 = 6;
WebiParser.T__6 = 7;
WebiParser.T__7 = 8;
WebiParser.T__8 = 9;
WebiParser.T__9 = 10;
WebiParser.T__10 = 11;
WebiParser.T__11 = 12;
WebiParser.T__12 = 13;
WebiParser.Println = 14;
WebiParser.Print = 15;
WebiParser.Input = 16;
WebiParser.Assert = 17;
WebiParser.Size = 18;
WebiParser.Def = 19;
WebiParser.If = 20;
WebiParser.Else = 21;
WebiParser.Return = 22;
WebiParser.For = 23;
WebiParser.While = 24;
WebiParser.To = 25;
WebiParser.Do = 26;
WebiParser.End = 27;
WebiParser.In = 28;
WebiParser.Null = 29;
WebiParser.Number = 30;
WebiParser.String = 31;
WebiParser.List = 32;
WebiParser.Boolean = 33;
WebiParser.Image = 34;
WebiParser.Json = 35;
WebiParser.Class = 36;
WebiParser.New = 37;
WebiParser.Playground = 38;
WebiParser.Button = 39;
WebiParser.Push = 40;
WebiParser.Pop = 41;
WebiParser.Or = 42;
WebiParser.And = 43;
WebiParser.Equals = 44;
WebiParser.NEquals = 45;
WebiParser.GTEquals = 46;
WebiParser.LTEquals = 47;
WebiParser.Pow = 48;
WebiParser.Excl = 49;
WebiParser.GT = 50;
WebiParser.LT = 51;
WebiParser.Add = 52;
WebiParser.Subtract = 53;
WebiParser.Multiply = 54;
WebiParser.Divide = 55;
WebiParser.Modulus = 56;
WebiParser.OBrace = 57;
WebiParser.CBrace = 58;
WebiParser.OBracket = 59;
WebiParser.CBracket = 60;
WebiParser.OParen = 61;
WebiParser.CParen = 62;
WebiParser.SColon = 63;
WebiParser.Assign = 64;
WebiParser.Comma = 65;
WebiParser.QMark = 66;
WebiParser.Colon = 67;
WebiParser.BoolVar = 68;
WebiParser.NumberVar = 69;
WebiParser.Identifier = 70;
WebiParser.StringVar = 71;
WebiParser.Comment = 72;
WebiParser.Space = 73;

WebiParser.RULE_parse = 0;
WebiParser.RULE_block = 1;
WebiParser.RULE_statement = 2;
WebiParser.RULE_assignment = 3;
WebiParser.RULE_functionCall = 4;
WebiParser.RULE_typeType = 5;
WebiParser.RULE_ifStatement = 6;
WebiParser.RULE_ifStat = 7;
WebiParser.RULE_elseIfStat = 8;
WebiParser.RULE_elseStat = 9;
WebiParser.RULE_functionDecl = 10;
WebiParser.RULE_classDecl = 11;
WebiParser.RULE_forStatement = 12;
WebiParser.RULE_whileStatement = 13;
WebiParser.RULE_idList = 14;
WebiParser.RULE_exprList = 15;
WebiParser.RULE_expression = 16;
WebiParser.RULE_list = 17;
WebiParser.RULE_jsonInit = 18;
WebiParser.RULE_imageInit = 19;
WebiParser.RULE_buttonInit = 20;
WebiParser.RULE_jsonCall = 21;
WebiParser.RULE_objValues = 22;
WebiParser.RULE_indexes = 23;

function ParseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = WebiParser.RULE_parse;
    return this;
}

ParseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ParseContext.prototype.constructor = ParseContext;

ParseContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};

ParseContext.prototype.EOF = function() {
    return this.getToken(WebiParser.EOF, 0);
};

ParseContext.prototype.enterRule = function(listener) {
    if(listener instanceof WebiListener ) {
        listener.enterParse(this);
	}
};

ParseContext.prototype.exitRule = function(listener) {
    if(listener instanceof WebiListener ) {
        listener.exitParse(this);
	}
};

ParseContext.prototype.accept = function(visitor) {
    if ( visitor instanceof WebiVisitor ) {
        return visitor.visitParse(this);
    } else {
        return visitor.visitChildren(this);
    }
};




WebiParser.ParseContext = ParseContext;

WebiParser.prototype.parse = function() {

    var localctx = new ParseContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, WebiParser.RULE_parse);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 48;
        this.block();
        this.state = 49;
        this.match(WebiParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function BlockContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = WebiParser.RULE_block;
    return this;
}

BlockContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BlockContext.prototype.constructor = BlockContext;

BlockContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

BlockContext.prototype.functionDecl = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(FunctionDeclContext);
    } else {
        return this.getTypedRuleContext(FunctionDeclContext,i);
    }
};

BlockContext.prototype.classDecl = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ClassDeclContext);
    } else {
        return this.getTypedRuleContext(ClassDeclContext,i);
    }
};

BlockContext.prototype.Return = function() {
    return this.getToken(WebiParser.Return, 0);
};

BlockContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

BlockContext.prototype.enterRule = function(listener) {
    if(listener instanceof WebiListener ) {
        listener.enterBlock(this);
	}
};

BlockContext.prototype.exitRule = function(listener) {
    if(listener instanceof WebiListener ) {
        listener.exitBlock(this);
	}
};

BlockContext.prototype.accept = function(visitor) {
    if ( visitor instanceof WebiVisitor ) {
        return visitor.visitBlock(this);
    } else {
        return visitor.visitChildren(this);
    }
};




WebiParser.BlockContext = BlockContext;

WebiParser.prototype.block = function() {

    var localctx = new BlockContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, WebiParser.RULE_block);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 56;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << WebiParser.T__2) | (1 << WebiParser.T__3) | (1 << WebiParser.T__4) | (1 << WebiParser.T__5) | (1 << WebiParser.T__6) | (1 << WebiParser.T__7) | (1 << WebiParser.T__8) | (1 << WebiParser.T__9) | (1 << WebiParser.T__10) | (1 << WebiParser.T__11) | (1 << WebiParser.T__12) | (1 << WebiParser.Println) | (1 << WebiParser.Print) | (1 << WebiParser.Assert) | (1 << WebiParser.Size) | (1 << WebiParser.Def) | (1 << WebiParser.If) | (1 << WebiParser.For) | (1 << WebiParser.While) | (1 << WebiParser.Number) | (1 << WebiParser.String))) !== 0) || ((((_la - 32)) & ~0x1f) == 0 && ((1 << (_la - 32)) & ((1 << (WebiParser.List - 32)) | (1 << (WebiParser.Boolean - 32)) | (1 << (WebiParser.Image - 32)) | (1 << (WebiParser.Json - 32)) | (1 << (WebiParser.Class - 32)) | (1 << (WebiParser.New - 32)))) !== 0) || _la===WebiParser.Identifier) {
            this.state = 54;
            this._errHandler.sync(this);
            switch(this._input.LA(1)) {
            case WebiParser.T__2:
            case WebiParser.T__3:
            case WebiParser.T__4:
            case WebiParser.T__5:
            case WebiParser.T__6:
            case WebiParser.T__7:
            case WebiParser.T__8:
            case WebiParser.T__9:
            case WebiParser.T__10:
            case WebiParser.T__11:
            case WebiParser.T__12:
            case WebiParser.Println:
            case WebiParser.Print:
            case WebiParser.Assert:
            case WebiParser.Size:
            case WebiParser.If:
            case WebiParser.For:
            case WebiParser.While:
            case WebiParser.Number:
            case WebiParser.String:
            case WebiParser.List:
            case WebiParser.Boolean:
            case WebiParser.Image:
            case WebiParser.Json:
            case WebiParser.New:
            case WebiParser.Identifier:
                this.state = 51;
                this.statement();
                break;
            case WebiParser.Def:
                this.state = 52;
                this.functionDecl();
                break;
            case WebiParser.Class:
                this.state = 53;
                this.classDecl();
                break;
            default:
                throw new antlr4.error.NoViableAltException(this);
            }
            this.state = 58;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 61;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===WebiParser.Return) {
            this.state = 59;
            this.match(WebiParser.Return);
            this.state = 60;
            this.expression(0);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = WebiParser.RULE_statement;
    return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;

StatementContext.prototype.assignment = function() {
    return this.getTypedRuleContext(AssignmentContext,0);
};

StatementContext.prototype.functionCall = function() {
    return this.getTypedRuleContext(FunctionCallContext,0);
};

StatementContext.prototype.ifStatement = function() {
    return this.getTypedRuleContext(IfStatementContext,0);
};

StatementContext.prototype.forStatement = function() {
    return this.getTypedRuleContext(ForStatementContext,0);
};

StatementContext.prototype.whileStatement = function() {
    return this.getTypedRuleContext(WhileStatementContext,0);
};

StatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof WebiListener ) {
        listener.enterStatement(this);
	}
};

StatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof WebiListener ) {
        listener.exitStatement(this);
	}
};

StatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof WebiVisitor ) {
        return visitor.visitStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




WebiParser.StatementContext = StatementContext;

WebiParser.prototype.statement = function() {

    var localctx = new StatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, WebiParser.RULE_statement);
    try {
        this.state = 68;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 63;
            this.assignment();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 64;
            this.functionCall();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 65;
            this.ifStatement();
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 66;
            this.forStatement();
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 67;
            this.whileStatement();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function AssignmentContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = WebiParser.RULE_assignment;
    return this;
}

AssignmentContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AssignmentContext.prototype.constructor = AssignmentContext;

AssignmentContext.prototype.Identifier = function() {
    return this.getToken(WebiParser.Identifier, 0);
};

AssignmentContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

AssignmentContext.prototype.jsonInit = function() {
    return this.getTypedRuleContext(JsonInitContext,0);
};

AssignmentContext.prototype.typeType = function() {
    return this.getTypedRuleContext(TypeTypeContext,0);
};

AssignmentContext.prototype.indexes = function() {
    return this.getTypedRuleContext(IndexesContext,0);
};

AssignmentContext.prototype.enterRule = function(listener) {
    if(listener instanceof WebiListener ) {
        listener.enterAssignment(this);
	}
};

AssignmentContext.prototype.exitRule = function(listener) {
    if(listener instanceof WebiListener ) {
        listener.exitAssignment(this);
	}
};

AssignmentContext.prototype.accept = function(visitor) {
    if ( visitor instanceof WebiVisitor ) {
        return visitor.visitAssignment(this);
    } else {
        return visitor.visitChildren(this);
    }
};




WebiParser.AssignmentContext = AssignmentContext;

WebiParser.prototype.assignment = function() {

    var localctx = new AssignmentContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, WebiParser.RULE_assignment);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 71;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(((((_la - 30)) & ~0x1f) == 0 && ((1 << (_la - 30)) & ((1 << (WebiParser.Number - 30)) | (1 << (WebiParser.String - 30)) | (1 << (WebiParser.List - 30)) | (1 << (WebiParser.Boolean - 30)) | (1 << (WebiParser.Image - 30)) | (1 << (WebiParser.Json - 30)))) !== 0)) {
            this.state = 70;
            this.typeType();
        }

        this.state = 73;
        this.match(WebiParser.Identifier);
        this.state = 75;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===WebiParser.OBracket) {
            this.state = 74;
            this.indexes();
        }

        this.state = 77;
        this.match(WebiParser.Assign);
        this.state = 80;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case WebiParser.T__2:
        case WebiParser.T__3:
        case WebiParser.T__4:
        case WebiParser.T__5:
        case WebiParser.T__6:
        case WebiParser.T__7:
        case WebiParser.T__8:
        case WebiParser.T__9:
        case WebiParser.T__10:
        case WebiParser.T__11:
        case WebiParser.T__12:
        case WebiParser.Println:
        case WebiParser.Print:
        case WebiParser.Input:
        case WebiParser.Assert:
        case WebiParser.Size:
        case WebiParser.Null:
        case WebiParser.New:
        case WebiParser.Excl:
        case WebiParser.Subtract:
        case WebiParser.OBracket:
        case WebiParser.OParen:
        case WebiParser.BoolVar:
        case WebiParser.NumberVar:
        case WebiParser.Identifier:
        case WebiParser.StringVar:
            this.state = 78;
            this.expression(0);
            break;
        case WebiParser.OBrace:
            this.state = 79;
            this.jsonInit();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function FunctionCallContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = WebiParser.RULE_functionCall;
    return this;
}

FunctionCallContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FunctionCallContext.prototype.constructor = FunctionCallContext;


 
FunctionCallContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function AssertFunctionCallContext(parser, ctx) {
	FunctionCallContext.call(this, parser);
    FunctionCallContext.prototype.copyFrom.call(this, ctx);
    return this;
}

AssertFunctionCallContext.prototype = Object.create(FunctionCallContext.prototype);
AssertFunctionCallContext.prototype.constructor = AssertFunctionCallContext;

WebiParser.AssertFunctionCallContext = AssertFunctionCallContext;

AssertFunctionCallContext.prototype.Assert = function() {
    return this.getToken(WebiParser.Assert, 0);
};

AssertFunctionCallContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};
AssertFunctionCallContext.prototype.enterRule = function(listener) {
    if(listener instanceof WebiListener ) {
        listener.enterAssertFunctionCall(this);
	}
};

AssertFunctionCallContext.prototype.exitRule = function(listener) {
    if(listener instanceof WebiListener ) {
        listener.exitAssertFunctionCall(this);
	}
};

AssertFunctionCallContext.prototype.accept = function(visitor) {
    if ( visitor instanceof WebiVisitor ) {
        return visitor.visitAssertFunctionCall(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function SizeFunctionCallContext(parser, ctx) {
	FunctionCallContext.call(this, parser);
    FunctionCallContext.prototype.copyFrom.call(this, ctx);
    return this;
}

SizeFunctionCallContext.prototype = Object.create(FunctionCallContext.prototype);
SizeFunctionCallContext.prototype.constructor = SizeFunctionCallContext;

WebiParser.SizeFunctionCallContext = SizeFunctionCallContext;

SizeFunctionCallContext.prototype.Size = function() {
    return this.getToken(WebiParser.Size, 0);
};

SizeFunctionCallContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};
SizeFunctionCallContext.prototype.enterRule = function(listener) {
    if(listener instanceof WebiListener ) {
        listener.enterSizeFunctionCall(this);
	}
};

SizeFunctionCallContext.prototype.exitRule = function(listener) {
    if(listener instanceof WebiListener ) {
        listener.exitSizeFunctionCall(this);
	}
};

SizeFunctionCallContext.prototype.accept = function(visitor) {
    if ( visitor instanceof WebiVisitor ) {
        return visitor.visitSizeFunctionCall(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function StrokeStyleContext(parser, ctx) {
	FunctionCallContext.call(this, parser);
    FunctionCallContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StrokeStyleContext.prototype = Object.create(FunctionCallContext.prototype);
StrokeStyleContext.prototype.constructor = StrokeStyleContext;

WebiParser.StrokeStyleContext = StrokeStyleContext;

StrokeStyleContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};
StrokeStyleContext.prototype.enterRule = function(listener) {
    if(listener instanceof WebiListener ) {
        listener.enterStrokeStyle(this);
	}
};

StrokeStyleContext.prototype.exitRule = function(listener) {
    if(listener instanceof WebiListener ) {
        listener.exitStrokeStyle(this);
	}
};

StrokeStyleContext.prototype.accept = function(visitor) {
    if ( visitor instanceof WebiVisitor ) {
        return visitor.visitStrokeStyle(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function ListPushExpresionContext(parser, ctx) {
	FunctionCallContext.call(this, parser);
    FunctionCallContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ListPushExpresionContext.prototype = Object.create(FunctionCallContext.prototype);
ListPushExpresionContext.prototype.constructor = ListPushExpresionContext;

WebiParser.ListPushExpresionContext = ListPushExpresionContext;

ListPushExpresionContext.prototype.Identifier = function() {
    return this.getToken(WebiParser.Identifier, 0);
};

ListPushExpresionContext.prototype.Push = function() {
    return this.getToken(WebiParser.Push, 0);
};

ListPushExpresionContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};
ListPushExpresionContext.prototype.enterRule = function(listener) {
    if(listener instanceof WebiListener ) {
        listener.enterListPushExpresion(this);
	}
};

ListPushExpresionContext.prototype.exitRule = function(listener) {
    if(listener instanceof WebiListener ) {
        listener.exitListPushExpresion(this);
	}
};

ListPushExpresionContext.prototype.accept = function(visitor) {
    if ( visitor instanceof WebiVisitor ) {
        return visitor.visitListPushExpresion(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function NewCanvasCallContext(parser, ctx) {
	FunctionCallContext.call(this, parser);
    FunctionCallContext.prototype.copyFrom.call(this, ctx);
    return this;
}

NewCanvasCallContext.prototype = Object.create(FunctionCallContext.prototype);
NewCanvasCallContext.prototype.constructor = NewCanvasCallContext;

WebiParser.NewCanvasCallContext = NewCanvasCallContext;

NewCanvasCallContext.prototype.exprList = function() {
    return this.getTypedRuleContext(ExprListContext,0);
};
NewCanvasCallContext.prototype.enterRule = function(listener) {
    if(listener instanceof WebiListener ) {
        listener.enterNewCanvasCall(this);
	}
};

NewCanvasCallContext.prototype.exitRule = function(listener) {
    if(listener instanceof WebiListener ) {
        listener.exitNewCanvasCall(this);
	}
};

NewCanvasCallContext.prototype.accept = function(visitor) {
    if ( visitor instanceof WebiVisitor ) {
        return visitor.visitNewCanvasCall(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function ClearPlaygroundCallContext(parser, ctx) {
	FunctionCallContext.call(this, parser);
    FunctionCallContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ClearPlaygroundCallContext.prototype = Object.create(FunctionCallContext.prototype);
ClearPlaygroundCallContext.prototype.constructor = ClearPlaygroundCallContext;

WebiParser.ClearPlaygroundCallContext = ClearPlaygroundCallContext;

ClearPlaygroundCallContext.prototype.enterRule = function(listener) {
    if(listener instanceof WebiListener ) {
        listener.enterClearPlaygroundCall(this);
	}
};

ClearPlaygroundCallContext.prototype.exitRule = function(listener) {
    if(listener instanceof WebiListener ) {
        listener.exitClearPlaygroundCall(this);
	}
};

ClearPlaygroundCallContext.prototype.accept = function(visitor) {
    if ( visitor instanceof WebiVisitor ) {
        return visitor.visitClearPlaygroundCall(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function ListPopExpressionContext(parser, ctx) {
	FunctionCallContext.call(this, parser);
    FunctionCallContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ListPopExpressionContext.prototype = Object.create(FunctionCallContext.prototype);
ListPopExpressionContext.prototype.constructor = ListPopExpressionContext;

WebiParser.ListPopExpressionContext = ListPopExpressionContext;

ListPopExpressionContext.prototype.Identifier = function() {
    return this.getToken(WebiParser.Identifier, 0);
};

ListPopExpressionContext.prototype.Pop = function() {
    return this.getToken(WebiParser.Pop, 0);
};
ListPopExpressionContext.prototype.enterRule = function(listener) {
    if(listener instanceof WebiListener ) {
        listener.enterListPopExpression(this);
	}
};

ListPopExpressionContext.prototype.exitRule = function(listener) {
    if(listener instanceof WebiListener ) {
        listener.exitListPopExpression(this);
	}
};
